--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -24,14 +24,14 @@
                 <p>Keep Your Goals on Track</p>
             </div>
 
-            <div class="heading-section">
+            <div style="color: #fff;" class="heading-section">
 <!--                <img th:src="@{/images/task.png}"/>-->
                 Dashboard
 
                 <br/>
 
                 <span style="font-size: 12px;">
-                     <span style="color: #007bff;"> Server Date:</span>
+                     <span style="color: #fff;"> Server Date:</span>
                      <span th:text="${serverTime}"></span>
 
                 </span>
