--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <!-- Header Section -->
     <div class="header" th:fragment="header">
         <div class="logo-section">
-            <img th:src="@{/images/logo.png}" alt="Arth Logo" class="logo">
+<!--            <img th:src="@{/images/logo.png}" alt="Arth Logo" class="logo">-->
             <div class="text-section">
                 <h1>Arth</h1>
                 <p>Keep Your Goals and Finances on Track</p>
