--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <div class="header">
         <div class="logo-section">
-            <img th:src="@{/images/logo.png}" alt="Arth Logo" class="logo">
+<!--            <img th:src="@{/images/logo.png}" alt="Arth Logo" class="logo">-->
             <div class="text-section">
                 <h1>Arth</h1>
                 <p>Keep Your Goals and Finance on Track</p>
