--- a/src/main/resources/templates/addtask.html
+++ b/src/main/resources/templates/addtask.html
@@ -24,8 +24,8 @@
                 <p>Keep Your Goals on Track</p>
             </div>
 
-            <div class="heading-section">
-                <img th:src="@{/images/add.png}"/>
+            <div style="color: #fff;" class="heading-section">
+<!--                <img th:src="@{/images/add.png}"/>-->
                 Add TODO
             </div>
         </div>
