--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -15,6 +15,8 @@
             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
         </div>
-        <p class="footer-copy">&copy; 2025 Arth. All rights reserved.</p>
+        <p class="footer-copy">© 2025 Arth. All rights reserved.</p>
+        <p class="footer-copy">Engineered with Passion & Precision by Ritesh Raj Tiwari</p>
+<!--        <p class="footer-copy">&copy; 2025 Arth. All rights reserved.</p>-->
     </div>
 </footer>
