Landing Page Improvement

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,4 +1,72 @@
 <!-- fragments/menu.html -->
+
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<body>-->
+<!--&lt;!&ndash; Define a fragment named "menu" &ndash;&gt;-->
+<!--<div th:fragment="menu">-->
+<!--    <div id="sidebar" class="sidebar">-->
+<!--        <div class="sidebar-header">-->
+<!--            <h3>Arth</h3>-->
+<!--            <button id="sidebarCloseBtn" class="close-btn">&times;</button>-->
+<!--        </div>-->
+<!--        <ul class="list-unstyled components">-->
+<!--            <li>-->
+<!--                <a th:href="@{/dashboard}">-->
+<!--                    <i class="fas fa-chart-line me-2"></i>Todo Dashboard-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a th:href="@{/addtask}">-->
+<!--                    <i class="fas fa-plus me-2"></i>TODO-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a th:href="@{/finance/dashboard}">-->
+<!--                    <i class="fas fa-chart-line me-2"></i>Finance Dashboard-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a th:href="@{/}">-->
+<!--                    <i class="fas fa-chart-line me-2"></i>Home-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a th:href="@{/changepasswd}">-->
+<!--                    <i class="fas fa-file-alt me-2"></i>Change Password-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            &lt;!&ndash; Add additional menu items here &ndash;&gt;-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--    &lt;!&ndash; Menu icon for mobile &ndash;&gt;-->
+<!--    <div id="menuIcon" class="menu-icon">-->
+<!--        <i class="fas fa-bars"></i>-->
+<!--    </div>-->
+<!--</div>-->
+<!--</body>-->
+<!--</html>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <nav th:fragment="menu">
     <div class="sidebar" id="sidebarMenu">
         <ul>
@@ -30,3 +98,4 @@
     </div>
     <div class="menu-icon" id="menuIcon" onclick="toggleMenu()">&#9776;</div>
 </nav>
+
