Finance View Page added

--- a/src/main/resources/templates/fragments/finance_menu.html
+++ b/src/main/resources/templates/fragments/finance_menu.html
@@ -11,7 +11,7 @@
         <ul class="list-unstyled components">
             <li>
                 <a th:href="@{/finance/dashboard}">
-                    <i class="fas fa-chart-line me-2"></i>Dashboard
+                    <i class="fas fa-chart-line me-2"></i> Finance Dashboard
                 </a>
             </li>
             <li>
