--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -48,26 +48,7 @@
 <!--</html>-->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<nav th:fragment="menu">
+<nav th:fragment="menu" xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="sidebar" id="sidebarMenu">
         <ul>
             <li>
