--- a/src/main/resources/templates/viewtask.html
+++ b/src/main/resources/templates/viewtask.html
@@ -23,7 +23,7 @@
                 <p>Keep Your Goals on Track</p>
             </div>
             <div class="heading-section">
-                <img th:src="@{/images/task.png}"/>
+<!--                <img th:src="@{/images/task.png}"/>-->
                 TODO Details
             </div>
         </div>
