--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,82 +1,143 @@
-<!-- fragments/menu.html -->
-
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<body>-->
-<!--&lt;!&ndash; Define a fragment named "menu" &ndash;&gt;-->
-<!--<div th:fragment="menu">-->
-<!--    <div id="sidebar" class="sidebar">-->
-<!--        <div class="sidebar-header">-->
-<!--            <h3>Arth</h3>-->
-<!--            <button id="sidebarCloseBtn" class="close-btn">&times;</button>-->
-<!--        </div>-->
-<!--        <ul class="list-unstyled components">-->
-<!--            <li>-->
-<!--                <a th:href="@{/dashboard}">-->
-<!--                    <i class="fas fa-chart-line me-2"></i>Todo Dashboard-->
-<!--                </a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a th:href="@{/addtask}">-->
-<!--                    <i class="fas fa-plus me-2"></i>TODO-->
-<!--                </a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a th:href="@{/finance/dashboard}">-->
-<!--                    <i class="fas fa-chart-line me-2"></i>Finance Dashboard-->
-<!--                </a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a th:href="@{/}">-->
-<!--                    <i class="fas fa-chart-line me-2"></i>Home-->
-<!--                </a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a th:href="@{/changepasswd}">-->
-<!--                    <i class="fas fa-file-alt me-2"></i>Change Password-->
-<!--                </a>-->
-<!--            </li>-->
-<!--            &lt;!&ndash; Add additional menu items here &ndash;&gt;-->
-<!--        </ul>-->
-<!--    </div>-->
-<!--    &lt;!&ndash; Menu icon for mobile &ndash;&gt;-->
-<!--    <div id="menuIcon" class="menu-icon">-->
-<!--        <i class="fas fa-bars"></i>-->
-<!--    </div>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
-
-
-<nav th:fragment="menu" xmlns:th="http://www.w3.org/1999/xhtml">
-    <div class="sidebar" id="sidebarMenu">
-        <ul>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<body>
+<!-- Define a fragment named "menu" -->
+<div th:fragment="menu">
+    <div id="sidebar" class="sidebar">
+        <div class="sidebar-header">
+            <h3>Arth</h3>
+            <button id="sidebarCloseBtn" class="close-btn">&times;</button>
+        </div>
+        <ul class="list-unstyled components">
             <li>
-                <a href="/dashboard">
-                    <img th:src="@{/images/task.png}" alt="Dashboard Icon">
-                    <p>Dashboard</p>
+                <a th:href="@{/}">
+                    <i class="fas fa-home me-2"></i> Home
                 </a>
             </li>
             <li>
-                <a href="/addtask">
-                    <img th:src="@{/images/add.png}" alt="Add TODO">
-                    <p>Add TODO</p>
+                <a th:href="@{/finance/dashboard}">
+                    <i class="fas fa-chart-line me-2"></i> Finance Dashboard
                 </a>
             </li>
             <li>
-                <a href="/changepasswd">
-                    <img th:src="@{/images/change_passwd.png}" alt="Change Password">
-                    <p>Change Password</p>
+                <a th:href="@{/dashboard}">
+                    <i class="fas fa-tasks me-2"></i> Todo Dashboard
                 </a>
             </li>
             <li>
-                <a href="/logout">
-                    <img th:src="@{/images/logout.png}" alt="Logout">
-                    <p>Logout</p>
+                <a th:href="@{/finance/add}">
+                    <i class="fas fa-plus me-2"></i> Add Finance
+                </a>
+            </li>
+            <li>
+                <a th:href="@{/addtask}">
+                    <i class="fas fa-plus me-2"></i> Add Todo
+                </a>
+            </li>
+            <li>
+                <a th:href="@{/chatbot}">
+                    <i class="fas fa-comments me-2"></i> Arth (Chat with me)
+                </a>
+            </li>
+            <li>
+                <a th:href="@{/finance/report}">
+                    <i class="fas fa-file-alt me-2"></i> Finance Reports
                 </a>
             </li>
         </ul>
     </div>
-    <div class="menu-icon" id="menuIcon" onclick="toggleMenu()">&#9776;</div>
-</nav>
+    <!-- Menu icon always visible for toggling -->
+    <div id="menuIcon" class="menu-icon">
+        <i class="fas fa-bars"></i>
+    </div>
+</div>
+</body>
+</html>
+
+
+
+
+
+
+<!--&lt;!&ndash; fragments/menu.html &ndash;&gt;-->
+
+<!--&lt;!&ndash;<!DOCTYPE html>&ndash;&gt;-->
+<!--&lt;!&ndash;<html xmlns:th="http://www.thymeleaf.org">&ndash;&gt;-->
+<!--&lt;!&ndash;<body>&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash; Define a fragment named "menu" &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;<div th:fragment="menu">&ndash;&gt;-->
+<!--&lt;!&ndash;    <div id="sidebar" class="sidebar">&ndash;&gt;-->
+<!--&lt;!&ndash;        <div class="sidebar-header">&ndash;&gt;-->
+<!--&lt;!&ndash;            <h3>Arth</h3>&ndash;&gt;-->
+<!--&lt;!&ndash;            <button id="sidebarCloseBtn" class="close-btn">&times;</button>&ndash;&gt;-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;        <ul class="list-unstyled components">&ndash;&gt;-->
+<!--&lt;!&ndash;            <li>&ndash;&gt;-->
+<!--&lt;!&ndash;                <a th:href="@{/dashboard}">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <i class="fas fa-chart-line me-2"></i>Todo Dashboard&ndash;&gt;-->
+<!--&lt;!&ndash;                </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            </li>&ndash;&gt;-->
+<!--&lt;!&ndash;            <li>&ndash;&gt;-->
+<!--&lt;!&ndash;                <a th:href="@{/addtask}">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <i class="fas fa-plus me-2"></i>TODO&ndash;&gt;-->
+<!--&lt;!&ndash;                </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            </li>&ndash;&gt;-->
+<!--&lt;!&ndash;            <li>&ndash;&gt;-->
+<!--&lt;!&ndash;                <a th:href="@{/finance/dashboard}">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <i class="fas fa-chart-line me-2"></i>Finance Dashboard&ndash;&gt;-->
+<!--&lt;!&ndash;                </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            </li>&ndash;&gt;-->
+<!--&lt;!&ndash;            <li>&ndash;&gt;-->
+<!--&lt;!&ndash;                <a th:href="@{/}">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <i class="fas fa-chart-line me-2"></i>Home&ndash;&gt;-->
+<!--&lt;!&ndash;                </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            </li>&ndash;&gt;-->
+<!--&lt;!&ndash;            <li>&ndash;&gt;-->
+<!--&lt;!&ndash;                <a th:href="@{/changepasswd}">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <i class="fas fa-file-alt me-2"></i>Change Password&ndash;&gt;-->
+<!--&lt;!&ndash;                </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            </li>&ndash;&gt;-->
+<!--&lt;!&ndash;            &lt;!&ndash; Add additional menu items here &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;        </ul>&ndash;&gt;-->
+<!--&lt;!&ndash;    </div>&ndash;&gt;-->
+<!--&lt;!&ndash;    &lt;!&ndash; Menu icon for mobile &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;    <div id="menuIcon" class="menu-icon">&ndash;&gt;-->
+<!--&lt;!&ndash;        <i class="fas fa-bars"></i>&ndash;&gt;-->
+<!--&lt;!&ndash;    </div>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--&lt;!&ndash;</body>&ndash;&gt;-->
+<!--&lt;!&ndash;</html>&ndash;&gt;-->
+
+
+<!--<nav th:fragment="menu" xmlns:th="http://www.w3.org/1999/xhtml">-->
+<!--    <div class="sidebar" id="sidebarMenu">-->
+<!--        <ul>-->
+<!--            <li>-->
+<!--                <a href="/dashboard">-->
+<!--                    <img th:src="@{/images/task.png}" alt="Dashboard Icon">-->
+<!--                    <p>Dashboard</p>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a href="/addtask">-->
+<!--                    <img th:src="@{/images/add.png}" alt="Add TODO">-->
+<!--                    <p>Add TODO</p>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a href="/changepasswd">-->
+<!--                    <img th:src="@{/images/change_passwd.png}" alt="Change Password">-->
+<!--                    <p>Change Password</p>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a href="/logout">-->
+<!--                    <img th:src="@{/images/logout.png}" alt="Logout">-->
+<!--                    <p>Logout</p>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--    <div class="menu-icon" id="menuIcon" onclick="toggleMenu()">&#9776;</div>-->
+<!--</nav>-->
 
